[package]
name = "pallet-dex-v2"
version = "0.0.2"
description = "Custom DEX pallet using the Polkadot SDK based of UniswapV2 implementation."
authors = ["Developer Uche <https://github.com/developeruche>"]
homepage = "https://github.com/developeruche/pallet-dex"
edition = "2021"
license = "MIT"
publish = true
repository = "https://github.com/developeruche/pallet-dex"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
	"derive",
	"serde",
] }
frame-benchmarking = { version = "31.0.0", default-features = false, optional = true }
frame-support = { version = "31.0.0", default-features = false, features = ["experimental"] }
frame-system = { version = "31.0.0", default-features = false }
sp-runtime = { version = "34.0.0", default-features = false, features = ["serde"] }
sp-std = { version = "14.0.0", default-features = false }



[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std"
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
